# trend-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
supabase/functions/daily-report/: index.ts
supabase/migrations/: 001_init.sql  002_enable_rls.sql
tests/: fakes.py  test_bybit_private.py  test_engine.py  test_guards.py  test_order_sizer.py  test_reconciler.py  test_repository.py  test_signal.py
trendbot/: __init__.py  cli.py  config.py  wiring.py
trendbot/backtest/: engine.py  walkforward.py
trendbot/core/: signal.py
trendbot/execution/: engine.py  executor.py  guards.py  models.py  order_sizer.py  reconciler.py
trendbot/marketdata/: bybit_client.py  bybit_private.py  ingestor.py
trendbot/notify/: telegram.py
trendbot/storage/: repository.py
