[project]
name = "trendbot"
version = "0.2.0"
description = "Systematic trend-following trading bot (BTC/ETH, spot, no leverage)"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "requests>=2.31",
    "supabase>=2.4",
    "pandas>=2.1",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
]

[project.scripts]
trendbot = "trendbot.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["trendbot*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
